<resources>
    <string name="app_name">注文管理</string>
    <string name="セール">セール</string>
    <string name="クーポン">クーポン</string>
    <string name="price">0</string>
    <string name="ok">OK</string>
    <string name="empty"></string>
    <string name="yen">円</string>

    <string name="プレーン">プレーン</string>
    <string name="しょうゆ">しょうゆ</string>
    <string name="明太">明太</string>
    <string name="ピザ">ピザ</string>
    <string name="デスソース">デスソース</string>
    <string name="はちみつ">はちみつ</string>

    <string name="プレーン個数">0</string>
    <string name="しょうゆ個数">0</string>
    <string name="明太個数">0</string>
    <string name="ピザ個数">0</string>
    <string name="デスソース個数">0</string>
    <string name="はちみつ個数">0</string>

    <string name="プラス">+</string>
    <string name="マイナス">-</string>
    <string name="リセット">Reset</string>

    <string name="キャンセル">CANCEL</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="hundred">00</string>
    <string name="clear">C</string>
    <string name="just">JUST</string>

    <string name="charge">のお釣りです</string>


</resources>
